
- Fix drag & drop in BufferTabs, which broke as a result of BufferSet ignoring
  changes in buffer index (#2100690) (Shlomy Reinstein).

- Fix #1974620: Cannot use C+e C+BACK_QUOTE for close-docking-area.
  (Shlomy Reinstein)

- Fixed a NPE which had prevented to switch from a loading buffer to
  another. (Kazutoshi Satoda)

- Fix #2017514: Selection occasionally lost after right-click.

}}}
{{{ Miscellaneous
  
- Removed redundant TextArea:EditPane map in EditPane.java in favor of a linear search through parent container linked list. (Alan Ezust)

- Applied patch #2296738: File/Directory properties dialog for VFS browser.
  The context menu of the VFS browser now has a "Properties" menu item that
  shows the properties of the selected node(s) in a dialog.
  
}}}
{{{ API Changes

- The keybindings are reloaded when the properties are changed in the standalone
  textarea, and the StandaloneActionSet now takes an url to the actions.xml
  as constructor parameter (patch #2304608) (Dakshinamurthy Karra)

- Added jEdit.openFile(EditPane, ....) methods to explicitely choose an editPane
  to open a file (Matthieu Casanova)

- Added jEdit.newFile(EditPane, ...) methods to explicitely choose an EditPane
  to create a new file (Matthieu Casanova)

- Added org.gjt.sp.jedit.menu.MenuItemTextComparator as the preferred
  alternative for deprecated MiscUtilities.MenuItemCompare.
  (Eric Berry - SF.net patch #2308329)

}}}
{{{ Editing
- New JavaFX edit mode (Matthieu Casanova)

- Fixes to XSLT mode (Pascal Sancho - # 1954810)

- New icalendar mode (Victor Engmark - #1934498

- Fix for java mode (tracker 737187), method name not always highlighted if
  there were one or more spaces or tabs following the method name (Dale Anson)

- Fix for jsp mode (tracker 846913), syntax highlighting doesn't ignore comments
  and strings, where a single line java comment on the same line as a scriptlet
  terminator improperly highlighted the terminator as a comment (Dale Anson)


}}}

}}}
